# Chronos-Self

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  readme.md  requirements.txt  setup.py  test_core.py  test_logical_encoder.py  test_output.txt
.trae/specs/implement-core-architecture/: checklist.md  spec.md  tasks.md
.trae/specs/restructure-project-readme/: checklist.md  spec.md  tasks.md
.trae/specs/validation-plan/: checklist.md  spec.md  tasks.md
chronos_core/: __init__.py  _version.py
chronos_core/core/: __init__.py  chaos_injector.py  coupling.py  dmn_system.py  external_input.py  fast_dynamics.py  history.py  integration_engine.py  neural_ode.py  slow_dynamics.py  state.py  state_controller.py  state_manager.py  test_integration_engine.py
chronos_core/core/chaos/: __init__.py  attractor_manager.py  base_attractor.py  chua_attractor.py  lorenz_attractor.py  rossler_attractor.py  test_chaos_dmn.py
chronos_core/core/meta_cognitive/: __init__.py  awareness_gradient.py  competitive_emergence.py  curiosity_engine.py  dynamic_layers.py  meta_cognitive_layer.py  meta_cognitive_manager.py  meta_cognitive_system.py  meta_consciousness_field.py  perception_layer.py  self_state_layer.py
chronos_core/core/reflection/: __init__.py  realtime_reflection.py  reflection_system.py  sleep_replay.py  sleep_updater.py  test_reflection.py
chronos_core/integration/: __init__.py  system_integration.py
chronos_core/memory/: __init__.py  work_memory.py
chronos_core/representation/: __init__.py  causal_encoder.py  fusion.py  logical_encoder.py  proprioceptive_encoder.py  semantic_encoder.py  ssm.py  world_encoder.py
chronos_core/training/: __init__.py  cli.py  dynamics_alignment.py  freezing_strategy.py  loss_functions.py  training_system.py
chronos_core/utils/: __init__.py  config.py  logger.py
chronos_core/validation/: __init__.py  behavioral_metrics.py  dynamics_monitoring.py  experiment_log.py  p0_validation.py  validation_system.py
docs/: Chronos-Self：有限自指意识模型.md  README.md  architecture.md  architecture_original.md  dev_log.md  numerical_optimization.md  training_guide.md  validation_guide.md  validation_optimization.md  validation_report.md
examples/: simple_text_interaction.py
scripts/: README.md  auto_fine_tuner.py  auto_validation_optimizer.py  complete_p2_test.py  decompose_jacobian.py  demo_fusion.py  direct_tuning_test.py  ei_grid_search.py  enhanced_tuner.py  example_semantic_encoder.py  fast_enhanced_tuner.py  fast_gamma_search.py  fast_param_tuner.py  fine_tuner.py  generate_validation_report.py  layered_validation.py  math_ode_fast_tuner.py  minimal_config_test.py  p0_lyapunov_5000_steps.py  p0_quick_check.py  p0_validation_spectral.py  p1_validation.py  p2_validation.py  p3_validation.py  p4_validation.py  performance_benchmark.py  quick_p2_test.py  real_system_fast_tuner.py  test_imex_stability.py  test_verlet_stability.py  ultra_fast_tuner.py  validate_single_params.py  validate_spectral_constraint.py  validate_state_lyapunov.py  verify_semantic_encoder.py
tests/: __init__.py  test_config.py  test_core_correctness.py  test_e2e_integration.py  test_fusion.py  test_meta_cognitive_system.py  test_semantic_encoder.py  test_training_system.py  test_work_memory.py
