[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chronos-self"
version = "0.1.0"
description = "A self-referential continuous dynamics system with emergent consciousness"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Chronos-Self Team", email = "team@chronos-self.ai"}
]
maintainers = [
    {name = "Chronos-Self Team", email = "team@chronos-self.ai"}
]
keywords = [
    "artificial-intelligence",
    "neural-ode",
    "self-referential",
    "continuous-dynamics",
    "emergent-consciousness",
    "meta-cognition"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "torchdiffeq>=0.2.3",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "transformers>=4.30.0",
    "chromadb>=0.4.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "omegaconf>=2.3.0",
    "pandas>=2.0.0",
    "h5py>=3.9.0",
    "tqdm>=4.65.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]
visualization = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]
all = [
    "chronos-self[dev,visualization]",
]

[project.urls]
Homepage = "https://github.com/chronos-self/chronos-self"
Documentation = "https://github.com/chronos-self/chronos-self#readme"
Repository = "https://github.com/chronos-self/chronos-self.git"
Issues = "https://github.com/chronos-self/chronos-self/issues"

[project.scripts]
chronos-train = "chronos_core.training.cli:main"
chronos-validate = "chronos_core.validation.cli:main"

[tool.setuptools]
packages = ["chronos_core"]

[tool.setuptools.package-data]
chronos_core = ["py.typed", "*.pyi"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "torchdiffeq",
    "chromadb",
    "transformers",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=chronos_core --cov-report=term-missing --cov-report=html"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["chronos_core"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]